--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "postinstall": "npm install bcrypt --build-from-source"
   },
   "author": "",
   "license": "ISC",
